# axum_test

./: Cargo.toml  README.md
src/: main.rs  otel.rs
