[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
hyper = "0.14.27"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0", features = ["metrics", "trace"] }
opentelemetry_sdk = "0.21.2"
opentelemetry-stdout = { version = "0.2.0", features = ["metrics", "trace"]}
opentelemetry-otlp = "0.14.0"
opentelemetry-http = "0.10.0"
